--- a/website/style.css
+++ b/website/style.css
@@ -1,3 +1,6 @@
+html{
+    height: 100%;
+}
 body{
     min-height: 100vh;
     overflow: hidden;
@@ -12,6 +15,8 @@ body{
     -moz-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+
+
 }
 header{
     background-color: #f3f2ef;
@@ -74,22 +79,6 @@ footer a{
 }
 
 
-
-footer > div{
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -moz-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+footer iframe{
+    vertical-align: middle;
 }
-
